# http-visualizer-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  go.mod  go.sum  wails.json
.github/workflows/: build-push.yaml
cmd/desktop/: app.go  main.go
cmd/server/: main.go
docs/: argocd-setup.md  ci-cd-pipeline.md  deployment-quickref.md  self-hosted-runner.md
internal/config/: config.go
internal/infra/: decompressor.go  dns.go  tls.go
internal/proxy/: executor.go  response_builder.go  timing.go  types.go
internal/static/: embed.go  static.go
internal/storage/: sqlite.go
k8s/: argocd-application.yaml  image-updater.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
pkg/statustext/: statustext.go
src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  generate-icons.mjs  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  proxy.rs  storage.rs
src/infra/: decompressor.rs  dns.rs  mod.rs  tls.rs
src/proxy/: executor.rs  mod.rs  response_builder.rs  service.rs  types.rs
src/routes/: health.rs  mod.rs  proxy.rs  static_files.rs
src/shared/: cert_parser.rs  mod.rs  status_text.rs  timing.rs
