[package]
name = "http-visualizer-desktop"
version = "0.1.0"
description = "HTTP Visualizer Desktop Application"
authors = ["HTTP Visualizer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Use the parent crate for shared proxy functionality
http-visualizer-app = { path = ".." }

# TLS crypto provider
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
